k8s/musicstore.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicservice
spec:
  selector:
    matchLabels:
      component: musicservice
  replicas: 3
  template:
    metadata:
      labels:
        app: musicservices
        component: musicservice
    spec:
      serviceAccountName: musicstore
      containers:
      - name: musicservice
        image: #@ "{}/{}/music-service:latest".format(data.values.registry.host, data.values.registry.project)
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: musicservice
spec:
  ports:
  - port: 8080
  selector:
    component: musicservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  selector:
    matchLabels:
      component: orderservice
  replicas: 3
  template:
    metadata:
      labels:
        app: musicservices
        component: orderservice
    spec:
      serviceAccountName: musicstore
      containers:
      - name: orderservice
        image: #@ "{}/{}/order-service:latest".format(data.values.registry.host, data.values.registry.project)
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  ports:
  - port: 8080
  selector:
    component: orderservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingcartservice
spec:
  selector:
    matchLabels:
      component: shoppingcartservice
  replicas: 3
  template:
    metadata:
      labels:
        app: musicservices
        component: shoppingcartservice
    spec:
      serviceAccountName: musicstore
      containers:
      - name: shoppingcartservice
        image: #@ "{}/{}/cart-service:latest".format(data.values.registry.host, data.values.registry.project)
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingcartservice
spec:
  ports:
  - port: 8080
  selector:
    component: shoppingcartservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicstore
spec:
  selector:
    matchLabels:
      component: musicstore
  replicas: 3
  template:
    metadata:
      labels:
        app: musicstore
        component: musicstore
    spec:
      serviceAccountName: musicstore
      containers:
      - name: musicstore
        image: #@ "{}/{}/ui:latest".format(data.values.registry.host, data.values.registry.project)
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: musicstore
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: musicstore
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicstore
  namespace: musicstore
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: musicstore.serrano.tanzu.shortrib.io
    http:
      paths:
      - backend:
          service:
            name: musicstore
            port:
              number: 8080
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - musicstore.serrano.tanzu.shortrib.io
    secretName: musicstore.serrano.tanzu.shortrib.io-tls
